examples/datalog/14_aggregations/23_global_stats.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_global_stats
Knowledge graph 'test_global_stats' created.
Switched to knowledge graph: test_global_stats
> .kg use test_global_stats
Switched to knowledge graph: test_global_stats
> +values[(100,), (200,), (300,), (400,), (500,)].
Inserted 5 fact(s) into 'values'.
> +total_sum(<SUM:V>) :- values(V).
Script error: Parse error: Invalid term: '<SUM:V>'
